--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -630,6 +630,10 @@
   "urls_observed": {
     "message": "URLs observed"
   },
+  "utilities": {
+    "message": "Utilities",
+    "description": "Tracker category name"
+  },
   "view_activity_details": {
     "message": "View activity details"
   },
