--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -630,6 +630,10 @@
   "urls_observed": {
     "message": "URL observadas"
   },
+  "utilities": {
+    "message": "Utilidades",
+    "description": "Tracker category name"
+  },
   "view_activity_details": {
     "message": "Ver detalles de la actividad"
   },
