--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -630,6 +630,10 @@
   "urls_observed": {
     "message": "观察到的 URL"
   },
+  "utilities": {
+    "message": "实用工具",
+    "description": "Tracker category name"
+  },
   "view_activity_details": {
     "message": "查看活动详情"
   },
