--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -326,8 +326,9 @@
   "ignore": {
     "message": "Игнорировать"
   },
-  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Информация о веб-трекерах будет распространяться в соответствии с нашей <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Политикой конфиденциальности</a>, продвигая защиту конфиденциальности для сообщества Ghostery."
+  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Информация о веб-трекерах, телеметрии состояния и производительности дополнений будет передаваться в соответствии с нашей <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Политикой конфиденциальности</a>, улучшая защиту конфиденциальности для сообщества Ghostery.",
+    "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Он существует благодаря микровкладам каждого пользователя Ghostery, отправляющего неперсональную информацию на WhoTracks.Me. Данные позволяют Ghostery оперативно предоставлять информацию о трекерах, что взамен обеспечивает защиту всего сообщества Ghostery."
